objects/tspa__TechSeeSessions__c.object
<CustomObject>
    <fields>
        <fullName>tspa__Accepted_By_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted By Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__AgentlinkForMobile__c</fullName>
        <label>AgentlinkForMobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__AgentlinkForTablet__c</fullName>
        <label>AgentlinkForTablet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__CallNotify__c</fullName>
        <label>CallNotify</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tspa__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Visual Remote Assistant-Session Invites</relationshipLabel>
        <relationshipName>Visual_Remote_Assistant_Session_Invites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tspa__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__CustomerDirectLink__c</fullName>
        <label>CustomerDirectLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__CustomerName__c</fullName>
        <label>CustomerName</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>tspa__DE_Channel__c</fullName>
        <label>DE Channel/Gateway</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Digital_Engagement__c</fullName>
        <label>Digital Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Messaging Channel</fullName>
                </value>
                <value>
                    <fullName>ChatBot</fullName>
                </value>
                <value>
                    <fullName>Custom Gateway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Email__c</fullName>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Error_Message_Body__c</fullName>
        <label>Error Message Body</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Error_Status_Code__c</fullName>
        <label>Error Status Code</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__HasNoVisualHistory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasNoVisualHistory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Initiated_from_vra_action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiated from vra action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Is_Scheduled_Meeting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Scheduled Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Messaging_User_RecordID__c</fullName>
        <label>Messaging User RecordID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__ObserverJoined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ObserverJoined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__Observer_Link__c</fullName>
        <label>Observer Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Observer_Type__c</fullName>
        <label>Observer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Observer__c</fullName>
        <label>Observer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Receiver_Type__c</fullName>
        <description>Receiver type can be :- Guest, Agent, Technician</description>
        <label>Receiver Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Receiver__c</fullName>
        <description>Storing ID of the receiver</description>
        <label>Receiver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__RecordId__c</fullName>
        <label>RecordId</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Refrence_Number__c</fullName>
        <description>Used to store reference number of the record.</description>
        <label>Refrence Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Screen_Type__c</fullName>
        <label>Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Share video</fullName>
                </value>
                <value>
                    <fullName>View video</fullName>
                </value>
                <value>
                    <fullName>Show video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tspa__Session_Ended_By__c</fullName>
        <label>Session Ended By</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__Sms_Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sms Delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__agentLink__c</fullName>
        <label>agentLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__audio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Audio Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__customerLink__c</fullName>
        <label>customerLink</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__desktopShareCode__c</fullName>
        <label>desktopShareCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__isEndUserRequestSession__c</fullName>
        <defaultValue>false</defaultValue>
        <label>End User Request Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__isOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isOpened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__isPopout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPopout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__isSanityTestRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSanityTestRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tspa__sendingMethod__c</fullName>
        <label>sendingMethod</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__sessionId__c</fullName>
        <label>sessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__sessionType__c</fullName>
        <label>sessionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tspa__smsFlowTimeout__c</fullName>
        <label>smsFlowTimeout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Visual Remote Assistant-Session Invites</label>
    <listViews>
        <fullName>tspa__All_Notifications</fullName>
        <columns>NAME</columns>
        <columns>tspa__isOpened__c</columns>
        <columns>tspa__sessionType__c</columns>
        <columns>tspa__sessionId__c</columns>
        <columns>tspa__sendingMethod__c</columns>
        <columns>tspa__customerLink__c</columns>
        <columns>tspa__agentLink__c</columns>
        <columns>tspa__Observer_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Notifications</label>
    </listViews>
    <nameField>
        <displayFormat>S-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visual Remote Assistant-Session Invites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>